<resources>
    <!-- This is how you comment in XML -->
    <!-- Strings for the application -->
    <string name="app_name">HappeningsApp</string>
    <!-- Strings for the navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User\'s name</string>
    <string name="nav_header_subtitle">User\'s email@utdallas.edu</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="clickStart">Testing Change</string> <!-- Button on content.xml -->
    <!-- Menu Strings -->
    <string name="menu_map">Map</string>
    <string name="menu_event_list">Event List</string>
    <string name="menu_club_search">Club Search</string>
    <string name="menu_photo_gallery">Photo Gallery</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="account_creation">Create Account</string>
    <!-- MapsActivity Strings -->
    <string name="fragment_maps">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="MapsAPIKey">AIzaSyC27iSTA9_X4srnNQ_opPFL8_-DV402kao</string> <!-- Google Maps API Key -->
    <string name="default_location">University of Texas at Dallas</string>

    <!-- EventListFragment Strings -->
    <string name="fragment_eventList">Event List</string>

    <string name="inText_username">Enter email</string>
    <string name="inText_password">Enter password</string>

    <!-- ClubSearchFragment Strings -->
    <string name="inText_clubsearch">Enter club name</string>

    <string name="searchable_clubList_name">Enter club name</string>
    <string name="searchable_clubList_label">Club Search Bar</string>

    <!-- IndividualClubFragment Strings -->
    <string name="clubEvents_label">Events</string>

    <string name="submit">Submit</string>

    <!-- Page Title -->
    <string name="pageTitle_userSettings">User Settings</string>
    <string name="pageTitle_eventList">Event List</string>
    <string name="pageTitle_settings">Settings</string>
    <string name="pageTitle_eventCreation">Create Event</string>
    <string name="eventCreationForm_end_time">End Time (e.g. 1:00 PM)</string>
    <string name="eventCreationForm_location_or_building_name">Location/Building (e.g. ECSN)</string>
    <string name="eventCreationForm_optional_room_number">OPTIONAL: Room (e.g. 2.412)</string>
    <string name="button_create_event">Create Event!</string>
    <string name="eventCreationForm_eventDescription">Description</string>
    <string name="eventCreationForm_eventName">Event Name</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="eventCreation_date">Date (e.g. Apr 26, 2024)</string>
    <string name="eventCreation_startTime">Start Time (e.g. 11:30 AM)</string>

    <string-array name="filter_options">
        <item>All</item>
        <item>Campus</item>
        <item>Club</item>
    </string-array>

</resources>
