<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">
<!--
need to add and change the icons on the side menu
-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_eventList"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_event_list" />
        <item
            android:id="@+id/nav_clubSearch"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_club_search" />
       <!-- Removing the photo gallery option from the side menu
        <item
            android:id="@+id/nav_photoGallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_photo_gallery" />
        -->
        <item
            android:id="@+id/nav_userProfileSetting"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_user_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_settings" />
    </group>
</menu>