<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eventCreation.eventCreationFragment">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pageTitle_eventCreation"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />


    <EditText
        android:id="@+id/inText_eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/eventCreationForm_eventName"
        app:layout_constraintBottom_toTopOf="@+id/inText_eventDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/inText_eventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/eventCreationForm_eventDescription"
        app:layout_constraintBottom_toTopOf="@+id/inText_startTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inText_eventName"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/inText_startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="start time"
        app:layout_constraintBottom_toTopOf="@+id/inText_endTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inText_eventDescription"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/inText_endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/eventCreationForm_end_time"
        app:layout_constraintBottom_toTopOf="@+id/inText_eventLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inText_startTime"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/inText_eventLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/eventCreationForm_location_or_building_name"
        app:layout_constraintBottom_toTopOf="@+id/inText_eventRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inText_endTime"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/inText_eventRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/eventCreationForm_optional_room_number"
        app:layout_constraintBottom_toTopOf="@+id/button_createEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inText_eventLocation"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_createEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inText_eventRoom"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>